--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ pipenv = "==2018.11.26"
 virtualenv = "==16.7.7"
 virtualenv-clone = "==0.5.3"
 Flask = "==1.1.1"
-Flask-Cors==3.0.8
+Flask-Cors = "==3.0.8"
 Jinja2 = "==2.10.3"
 MarkupSafe = "==1.1.1"
 SQLAlchemy = "==1.3.10"
